# Nexus

./: .gitignore  CODE_OF_CONDUCT.md  CODE_QUALITY.md  CONTRIBUTING.md  LICENSE  Nexus WBS.xlsx  README.md  Research.md
.claude/agents/: nexus-task-builder.md  quality-scorer.md
.claude/skills/nexus-build-loop/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_proposal.yml
backend/: pyproject.toml
backend/app/adapter/: __init__.py  base.py  claude_cli.py  ollama.py
backend/tests/adapter/: test_base.py  test_claude_cli.py  test_ollama.py
backend/tests/adapter/fixtures/: claude_stream.jsonl
context/: nexus-v0.1-one-task-background.md  nexus-v0.2-overnight-loop.md  nexus-v0.3-repo-brain-and-triggers.md  nexus-v0.4-personal-mode-and-hardening.md
db/: README.md  apply-migrations.ps1  apply-migrations.sh  docker-compose.yml
db/migrations/: 0001_core.sql  0002_overnight_loop.sql  0003_repo_kg_memory.sql  0004_personal_hardening.sql
db/postgres/: Dockerfile
docs/: database-architecture.md
docs/Adapter+Sandbox/: 01-adapter-protocol.md  02-cli-backends.md  03-ollama-backend.md  04-nexus-sandbox-image.md  README.md
docs/superpowers/specs/: 2026-07-05-nexus-build-loop-design.md
sandbox/: Dockerfile  README.md
