[project]
name = "nexus-backend"
version = "0.1.0"
description = "Nexus v0.1 backend — coding-agent adapter + orchestrator"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",          # used by the Ollama client (Task 03)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: hits the real claude/codex CLIs (spends subscription quota)"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
